javadoc + simplifications + fixes + tests